a2/MiniLang/src/parser.output
Terminals unused in grammar

   tSUB
   tNEG


State 37 conflicts: 12 shift/reduce
State 38 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 64 conflicts: 12 shift/reduce
State 65 conflicts: 1 shift/reduce
State 66 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: %empty
    3      | stmt stmts

    4 stmt: tREAD tLPAREN tIDENT tRPAREN tSEMICOLON
    5     | tPRINT tLPAREN expr tRPAREN tSEMICOLON
    6     | decl
    7     | tIDENT tASSIGN expr tSEMICOLON
    8     | ifstmt
    9     | whileloop

   10 decl: tVAR tIDENT tCOLON tBOOLTYPE tSEMICOLON
   11     | tVAR tIDENT tCOLON tINTTYPE tSEMICOLON
   12     | tVAR tIDENT tCOLON tFLOATTYPE tSEMICOLON
   13     | tVAR tIDENT tCOLON tSTRINGTYPE tSEMICOLON
   14     | tVAR tIDENT tCOLON tBOOLTYPE tASSIGN expr tSEMICOLON
   15     | tVAR tIDENT tCOLON tINTTYPE tASSIGN expr tSEMICOLON
   16     | tVAR tIDENT tCOLON tFLOATTYPE tASSIGN expr tSEMICOLON
   17     | tVAR tIDENT tCOLON tSTRINGTYPE tASSIGN expr tSEMICOLON

   18 ifstmt: tIF tLPAREN expr tRPAREN tLBRACE stmts tRBRACE elsestmt

   19 elsestmt: tELSE tLBRACE stmts tRBRACE
   20         | tELSE ifstmt
   21         | %empty

   22 whileloop: tWHILE tLPAREN expr tRPAREN tLBRACE stmts tRBRACE

   23 expr: tIDENT
   24     | tTRUE
   25     | tFALSE
   26     | tINTVAL
   27     | tFLOATVAL
   28     | tSTRINGVAL
   29     | tMINUS expr
   30     | tNOT expr
   31     | tLPAREN expr tRPAREN
   32     | expr tMUL expr
   33     | expr tDIV expr
   34     | expr tADD expr
   35     | expr tMINUS expr
   36     | expr tGREATEREQ expr
   37     | expr tLESSEQ expr
   38     | expr tGREATER expr
   39     | expr tLESS expr
   40     | expr tEQUALS expr
   41     | expr tNEQUALS expr
   42     | expr tAND expr
   43     | expr tOR expr


Terminals, with rules where they appear

$end (0) 0
error (256)
tTRUE (258) 24
tFALSE (259) 25
tINTVAL (260) 26
tFLOATVAL (261) 27
tSTRINGVAL (262) 28
tBOOLTYPE (263) 10 14
tINTTYPE (264) 11 15
tFLOATTYPE (265) 12 16
tSTRINGTYPE (266) 13 17
tIDENT (267) 4 7 10 11 12 13 14 15 16 17 23
tLPAREN (268) 4 5 18 22 31
tRPAREN (269) 4 5 18 22 31
tLBRACE (270) 18 19 22
tRBRACE (271) 18 19 22
tSEMICOLON (272) 4 5 7 10 11 12 13 14 15 16 17
tVAR (273) 10 11 12 13 14 15 16 17
tIF (274) 18
tELSE (275) 19 20
tWHILE (276) 22
tREAD (277) 4
tPRINT (278) 5
tCOLON (279) 10 11 12 13 14 15 16 17
tASSIGN (280) 7 14 15 16 17
tADD (281) 34
tMUL (282) 32
tDIV (283) 33
tMINUS (284) 29 35
tEQUALS (285) 40
tNEQUALS (286) 41
tGREATEREQ (287) 36
tLESSEQ (288) 37
tGREATER (289) 38
tLESS (290) 39
tAND (291) 42
tOR (292) 43
tNOT (293) 30
tSUB (294)
tNEG (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1, on right: 0
stmts (43)
    on left: 2 3, on right: 1 3 18 19 22
stmt (44)
    on left: 4 5 6 7 8 9, on right: 3
decl (45)
    on left: 10 11 12 13 14 15 16 17, on right: 6
ifstmt (46)
    on left: 18, on right: 8 20
elsestmt (47)
    on left: 19 20 21, on right: 18
whileloop (48)
    on left: 22, on right: 9
expr (49)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43, on right: 5 7 14 15 16 17 18 22 29 30 31 32 33 34 35
    36 37 38 39 40 41 42 43


State 0

    0 $accept: . program $end
    1 program: . stmts
    2 stmts: . %empty  [$end]
    3      | . stmt stmts
    4 stmt: . tREAD tLPAREN tIDENT tRPAREN tSEMICOLON
    5     | . tPRINT tLPAREN expr tRPAREN tSEMICOLON
    6     | . decl
    7     | . tIDENT tASSIGN expr tSEMICOLON
    8     | . ifstmt
    9     | . whileloop
   10 decl: . tVAR tIDENT tCOLON tBOOLTYPE tSEMICOLON
   11     | . tVAR tIDENT tCOLON tINTTYPE tSEMICOLON
   12     | . tVAR tIDENT tCOLON tFLOATTYPE tSEMICOLON
   13     | . tVAR tIDENT tCOLON tSTRINGTYPE tSEMICOLON
   14     | . tVAR tIDENT tCOLON tBOOLTYPE tASSIGN expr tSEMICOLON
   15     | . tVAR tIDENT tCOLON tINTTYPE tASSIGN expr tSEMICOLON
   16     | . tVAR tIDENT tCOLON tFLOATTYPE tASSIGN expr tSEMICOLON
   17     | . tVAR tIDENT tCOLON tSTRINGTYPE tASSIGN expr tSEMICOLON
   18 ifstmt: . tIF tLPAREN expr tRPAREN tLBRACE stmts tRBRACE elsestmt
   22 whileloop: . tWHILE tLPAREN expr tRPAREN tLBRACE stmts tRBRACE

    tIDENT  shift, and go to state 1
    tVAR    shift, and go to state 2
    tIF     shift, and go to state 3
    tWHILE  shift, and go to state 4
    tREAD   shift, and go to state 5
    tPRINT  shift, and go to state 6

    $default  reduce using rule 2 (stmts)

    program    go to state 7
    stmts      go to state 8
    stmt       go to state 9
    decl       go to state 10
    ifstmt     go to state 11
    whileloop  go to state 12


State 1

    7 stmt: tIDENT . tASSIGN expr tSEMICOLON

    tASSIGN  shift, and go to state 13


State 2

   10 decl: tVAR . tIDENT tCOLON tBOOLTYPE tSEMICOLON
   11     | tVAR . tIDENT tCOLON tINTTYPE tSEMICOLON
   12     | tVAR . tIDENT tCOLON tFLOATTYPE tSEMICOLON
   13     | tVAR . tIDENT tCOLON tSTRINGTYPE tSEMICOLON
   14     | tVAR . tIDENT tCOLON tBOOLTYPE tASSIGN expr tSEMICOLON
   15     | tVAR . tIDENT tCOLON tINTTYPE tASSIGN expr tSEMICOLON
   16     | tVAR . tIDENT tCOLON tFLOATTYPE tASSIGN expr tSEMICOLON
   17     | tVAR . tIDENT tCOLON tSTRINGTYPE tASSIGN expr tSEMICOLON

    tIDENT  shift, and go to state 14


State 3

   18 ifstmt: tIF . tLPAREN expr tRPAREN tLBRACE stmts tRBRACE elsestmt

    tLPAREN  shift, and go to state 15


State 4

   22 whileloop: tWHILE . tLPAREN expr tRPAREN tLBRACE stmts tRBRACE

    tLPAREN  shift, and go to state 16


State 5

    4 stmt: tREAD . tLPAREN tIDENT tRPAREN tSEMICOLON

    tLPAREN  shift, and go to state 17


State 6

    5 stmt: tPRINT . tLPAREN expr tRPAREN tSEMICOLON

    tLPAREN  shift, and go to state 18


State 7

    0 $accept: program . $end

    $end  shift, and go to state 19


State 8

    1 program: stmts .

    $default  reduce using rule 1 (program)


State 9

    2 stmts: . %empty  [$end, tRBRACE]
    3      | . stmt stmts
    3      | stmt . stmts
    4 stmt: . tREAD tLPAREN tIDENT tRPAREN tSEMICOLON
    5     | . tPRINT tLPAREN expr tRPAREN tSEMICOLON
    6     | . decl
    7     | . tIDENT tASSIGN expr tSEMICOLON
    8     | . ifstmt
    9     | . whileloop
   10 decl: . tVAR tIDENT tCOLON tBOOLTYPE tSEMICOLON
   11     | . tVAR tIDENT tCOLON tINTTYPE tSEMICOLON
   12     | . tVAR tIDENT tCOLON tFLOATTYPE tSEMICOLON
   13     | . tVAR tIDENT tCOLON tSTRINGTYPE tSEMICOLON
   14     | . tVAR tIDENT tCOLON tBOOLTYPE tASSIGN expr tSEMICOLON
   15     | . tVAR tIDENT tCOLON tINTTYPE tASSIGN expr tSEMICOLON
   16     | . tVAR tIDENT tCOLON tFLOATTYPE tASSIGN expr tSEMICOLON
   17     | . tVAR tIDENT tCOLON tSTRINGTYPE tASSIGN expr tSEMICOLON
   18 ifstmt: . tIF tLPAREN expr tRPAREN tLBRACE stmts tRBRACE elsestmt
   22 whileloop: . tWHILE tLPAREN expr tRPAREN tLBRACE stmts tRBRACE

    tIDENT  shift, and go to state 1
    tVAR    shift, and go to state 2
    tIF     shift, and go to state 3
    tWHILE  shift, and go to state 4
    tREAD   shift, and go to state 5
    tPRINT  shift, and go to state 6

    $default  reduce using rule 2 (stmts)

    stmts      go to state 20
    stmt       go to state 9
    decl       go to state 10
    ifstmt     go to state 11
    whileloop  go to state 12


State 10

    6 stmt: decl .

    $default  reduce using rule 6 (stmt)


State 11

    8 stmt: ifstmt .

    $default  reduce using rule 8 (stmt)


State 12

    9 stmt: whileloop .

    $default  reduce using rule 9 (stmt)


State 13

    7 stmt: tIDENT tASSIGN . expr tSEMICOLON
   23 expr: . tIDENT
   24     | . tTRUE
   25     | . tFALSE
   26     | . tINTVAL
   27     | . tFLOATVAL
   28     | . tSTRINGVAL
   29     | . tMINUS expr
   30     | . tNOT expr
   31     | . tLPAREN expr tRPAREN
   32     | . expr tMUL expr
   33     | . expr tDIV expr
   34     | . expr tADD expr
   35     | . expr tMINUS expr
   36     | . expr tGREATEREQ expr
   37     | . expr tLESSEQ expr
   38     | . expr tGREATER expr
   39     | . expr tLESS expr
   40     | . expr tEQUALS expr
   41     | . expr tNEQUALS expr
   42     | . expr tAND expr
   43     | . expr tOR expr

    tTRUE       shift, and go to state 21
    tFALSE      shift, and go to state 22
    tINTVAL     shift, and go to state 23
    tFLOATVAL   shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tIDENT      shift, and go to state 26
    tLPAREN     shift, and go to state 27
    tMINUS      shift, and go to state 28
    tNOT        shift, and go to state 29

    expr  go to state 30


State 14

   10 decl: tVAR tIDENT . tCOLON tBOOLTYPE tSEMICOLON
   11     | tVAR tIDENT . tCOLON tINTTYPE tSEMICOLON
   12     | tVAR tIDENT . tCOLON tFLOATTYPE tSEMICOLON
   13     | tVAR tIDENT . tCOLON tSTRINGTYPE tSEMICOLON
   14     | tVAR tIDENT . tCOLON tBOOLTYPE tASSIGN expr tSEMICOLON
   15     | tVAR tIDENT . tCOLON tINTTYPE tASSIGN expr tSEMICOLON
   16     | tVAR tIDENT . tCOLON tFLOATTYPE tASSIGN expr tSEMICOLON
   17     | tVAR tIDENT . tCOLON tSTRINGTYPE tASSIGN expr tSEMICOLON

    tCOLON  shift, and go to state 31


State 15

   18 ifstmt: tIF tLPAREN . expr tRPAREN tLBRACE stmts tRBRACE elsestmt
   23 expr: . tIDENT
   24     | . tTRUE
   25     | . tFALSE
   26     | . tINTVAL
   27     | . tFLOATVAL
   28     | . tSTRINGVAL
   29     | . tMINUS expr
   30     | . tNOT expr
   31     | . tLPAREN expr tRPAREN
   32     | . expr tMUL expr
   33     | . expr tDIV expr
   34     | . expr tADD expr
   35     | . expr tMINUS expr
   36     | . expr tGREATEREQ expr
   37     | . expr tLESSEQ expr
   38     | . expr tGREATER expr
   39     | . expr tLESS expr
   40     | . expr tEQUALS expr
   41     | . expr tNEQUALS expr
   42     | . expr tAND expr
   43     | . expr tOR expr

    tTRUE       shift, and go to state 21
    tFALSE      shift, and go to state 22
    tINTVAL     shift, and go to state 23
    tFLOATVAL   shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tIDENT      shift, and go to state 26
    tLPAREN     shift, and go to state 27
    tMINUS      shift, and go to state 28
    tNOT        shift, and go to state 29

    expr  go to state 32


State 16

   22 whileloop: tWHILE tLPAREN . expr tRPAREN tLBRACE stmts tRBRACE
   23 expr: . tIDENT
   24     | . tTRUE
   25     | . tFALSE
   26     | . tINTVAL
   27     | . tFLOATVAL
   28     | . tSTRINGVAL
   29     | . tMINUS expr
   30     | . tNOT expr
   31     | . tLPAREN expr tRPAREN
   32     | . expr tMUL expr
   33     | . expr tDIV expr
   34     | . expr tADD expr
   35     | . expr tMINUS expr
   36     | . expr tGREATEREQ expr
   37     | . expr tLESSEQ expr
   38     | . expr tGREATER expr
   39     | . expr tLESS expr
   40     | . expr tEQUALS expr
   41     | . expr tNEQUALS expr
   42     | . expr tAND expr
   43     | . expr tOR expr

    tTRUE       shift, and go to state 21
    tFALSE      shift, and go to state 22
    tINTVAL     shift, and go to state 23
    tFLOATVAL   shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tIDENT      shift, and go to state 26
    tLPAREN     shift, and go to state 27
    tMINUS      shift, and go to state 28
    tNOT        shift, and go to state 29

    expr  go to state 33


State 17

    4 stmt: tREAD tLPAREN . tIDENT tRPAREN tSEMICOLON

    tIDENT  shift, and go to state 34


State 18

    5 stmt: tPRINT tLPAREN . expr tRPAREN tSEMICOLON
   23 expr: . tIDENT
   24     | . tTRUE
   25     | . tFALSE
   26     | . tINTVAL
   27     | . tFLOATVAL
   28     | . tSTRINGVAL
   29     | . tMINUS expr
   30     | . tNOT expr
   31     | . tLPAREN expr tRPAREN
   32     | . expr tMUL expr
   33     | . expr tDIV expr
   34     | . expr tADD expr
   35     | . expr tMINUS expr
   36     | . expr tGREATEREQ expr
   37     | . expr tLESSEQ expr
   38     | . expr tGREATER expr
   39     | . expr tLESS expr
   40     | . expr tEQUALS expr
   41     | . expr tNEQUALS expr
   42     | . expr tAND expr
   43     | . expr tOR expr

    tTRUE       shift, and go to state 21
    tFALSE      shift, and go to state 22
    tINTVAL     shift, and go to state 23
    tFLOATVAL   shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tIDENT      shift, and go to state 26
    tLPAREN     shift, and go to state 27
    tMINUS      shift, and go to state 28
    tNOT        shift, and go to state 29

    expr  go to state 35


State 19

    0 $accept: program $end .

    $default  accept


State 20

    3 stmts: stmt stmts .

    $default  reduce using rule 3 (stmts)


State 21

   24 expr: tTRUE .

    $default  reduce using rule 24 (expr)


State 22

   25 expr: tFALSE .

    $default  reduce using rule 25 (expr)


State 23

   26 expr: tINTVAL .

    $default  reduce using rule 26 (expr)


State 24

   27 expr: tFLOATVAL .

    $default  reduce using rule 27 (expr)


State 25

   28 expr: tSTRINGVAL .

    $default  reduce using rule 28 (expr)


State 26

   23 expr: tIDENT .

    $default  reduce using rule 23 (expr)


State 27

   23 expr: . tIDENT
   24     | . tTRUE
   25     | . tFALSE
   26     | . tINTVAL
   27     | . tFLOATVAL
   28     | . tSTRINGVAL
   29     | . tMINUS expr
   30     | . tNOT expr
   31     | . tLPAREN expr tRPAREN
   31     | tLPAREN . expr tRPAREN
   32     | . expr tMUL expr
   33     | . expr tDIV expr
   34     | . expr tADD expr
   35     | . expr tMINUS expr
   36     | . expr tGREATEREQ expr
   37     | . expr tLESSEQ expr
   38     | . expr tGREATER expr
   39     | . expr tLESS expr
   40     | . expr tEQUALS expr
   41     | . expr tNEQUALS expr
   42     | . expr tAND expr
   43     | . expr tOR expr

    tTRUE       shift, and go to state 21
    tFALSE      shift, and go to state 22
    tINTVAL     shift, and go to state 23
    tFLOATVAL   shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tIDENT      shift, and go to state 26
    tLPAREN     shift, and go to state 27
    tMINUS      shift, and go to state 28
    tNOT        shift, and go to state 29

    expr  go to state 36


State 28

   23 expr: . tIDENT
   24     | . tTRUE
   25     | . tFALSE
   26     | . tINTVAL
   27     | . tFLOATVAL
   28     | . tSTRINGVAL
   29     | . tMINUS expr
   29     | tMINUS . expr
   30     | . tNOT expr
   31     | . tLPAREN expr tRPAREN
   32     | . expr tMUL expr
   33     | . expr tDIV expr
   34     | . expr tADD expr
   35     | . expr tMINUS expr
   36     | . expr tGREATEREQ expr
   37     | . expr tLESSEQ expr
   38     | . expr tGREATER expr
   39     | . expr tLESS expr
   40     | . expr tEQUALS expr
   41     | . expr tNEQUALS expr
   42     | . expr tAND expr
   43     | . expr tOR expr

    tTRUE       shift, and go to state 21
    tFALSE      shift, and go to state 22
    tINTVAL     shift, and go to state 23
    tFLOATVAL   shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tIDENT      shift, and go to state 26
    tLPAREN     shift, and go to state 27
    tMINUS      shift, and go to state 28
    tNOT        shift, and go to state 29

    expr  go to state 37


State 29

   23 expr: . tIDENT
   24     | . tTRUE
   25     | . tFALSE
   26     | . tINTVAL
   27     | . tFLOATVAL
   28     | . tSTRINGVAL
   29     | . tMINUS expr
   30     | . tNOT expr
   30     | tNOT . expr
   31     | . tLPAREN expr tRPAREN
   32     | . expr tMUL expr
   33     | . expr tDIV expr
   34     | . expr tADD expr
   35     | . expr tMINUS expr
   36     | . expr tGREATEREQ expr
   37     | . expr tLESSEQ expr
   38     | . expr tGREATER expr
   39     | . expr tLESS expr
   40     | . expr tEQUALS expr
   41     | . expr tNEQUALS expr
   42     | . expr tAND expr
   43     | . expr tOR expr

    tTRUE       shift, and go to state 21
    tFALSE      shift, and go to state 22
    tINTVAL     shift, and go to state 23
    tFLOATVAL   shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tIDENT      shift, and go to state 26
    tLPAREN     shift, and go to state 27
    tMINUS      shift, and go to state 28
    tNOT        shift, and go to state 29

    expr  go to state 38


State 30

    7 stmt: tIDENT tASSIGN expr . tSEMICOLON
   32 expr: expr . tMUL expr
   33     | expr . tDIV expr
   34     | expr . tADD expr
   35     | expr . tMINUS expr
   36     | expr . tGREATEREQ expr
   37     | expr . tLESSEQ expr
   38     | expr . tGREATER expr
   39     | expr . tLESS expr
   40     | expr . tEQUALS expr
   41     | expr . tNEQUALS expr
   42     | expr . tAND expr
   43     | expr . tOR expr

    tSEMICOLON  shift, and go to state 39
    tADD        shift, and go to state 40
    tMUL        shift, and go to state 41
    tDIV        shift, and go to state 42
    tMINUS      shift, and go to state 43
    tEQUALS     shift, and go to state 44
    tNEQUALS    shift, and go to state 45
    tGREATEREQ  shift, and go to state 46
    tLESSEQ     shift, and go to state 47
    tGREATER    shift, and go to state 48
    tLESS       shift, and go to state 49
    tAND        shift, and go to state 50
    tOR         shift, and go to state 51


State 31

   10 decl: tVAR tIDENT tCOLON . tBOOLTYPE tSEMICOLON
   11     | tVAR tIDENT tCOLON . tINTTYPE tSEMICOLON
   12     | tVAR tIDENT tCOLON . tFLOATTYPE tSEMICOLON
   13     | tVAR tIDENT tCOLON . tSTRINGTYPE tSEMICOLON
   14     | tVAR tIDENT tCOLON . tBOOLTYPE tASSIGN expr tSEMICOLON
   15     | tVAR tIDENT tCOLON . tINTTYPE tASSIGN expr tSEMICOLON
   16     | tVAR tIDENT tCOLON . tFLOATTYPE tASSIGN expr tSEMICOLON
   17     | tVAR tIDENT tCOLON . tSTRINGTYPE tASSIGN expr tSEMICOLON

    tBOOLTYPE    shift, and go to state 52
    tINTTYPE     shift, and go to state 53
    tFLOATTYPE   shift, and go to state 54
    tSTRINGTYPE  shift, and go to state 55


State 32

   18 ifstmt: tIF tLPAREN expr . tRPAREN tLBRACE stmts tRBRACE elsestmt
   32 expr: expr . tMUL expr
   33     | expr . tDIV expr
   34     | expr . tADD expr
   35     | expr . tMINUS expr
   36     | expr . tGREATEREQ expr
   37     | expr . tLESSEQ expr
   38     | expr . tGREATER expr
   39     | expr . tLESS expr
   40     | expr . tEQUALS expr
   41     | expr . tNEQUALS expr
   42     | expr . tAND expr
   43     | expr . tOR expr

    tRPAREN     shift, and go to state 56
    tADD        shift, and go to state 40
    tMUL        shift, and go to state 41
    tDIV        shift, and go to state 42
    tMINUS      shift, and go to state 43
    tEQUALS     shift, and go to state 44
    tNEQUALS    shift, and go to state 45
    tGREATEREQ  shift, and go to state 46
    tLESSEQ     shift, and go to state 47
    tGREATER    shift, and go to state 48
    tLESS       shift, and go to state 49
    tAND        shift, and go to state 50
    tOR         shift, and go to state 51


State 33

   22 whileloop: tWHILE tLPAREN expr . tRPAREN tLBRACE stmts tRBRACE
   32 expr: expr . tMUL expr
   33     | expr . tDIV expr
   34     | expr . tADD expr
   35     | expr . tMINUS expr
   36     | expr . tGREATEREQ expr
   37     | expr . tLESSEQ expr
   38     | expr . tGREATER expr
   39     | expr . tLESS expr
   40     | expr . tEQUALS expr
   41     | expr . tNEQUALS expr
   42     | expr . tAND expr
   43     | expr . tOR expr

    tRPAREN     shift, and go to state 57
    tADD        shift, and go to state 40
    tMUL        shift, and go to state 41
    tDIV        shift, and go to state 42
    tMINUS      shift, and go to state 43
    tEQUALS     shift, and go to state 44
    tNEQUALS    shift, and go to state 45
    tGREATEREQ  shift, and go to state 46
    tLESSEQ     shift, and go to state 47
    tGREATER    shift, and go to state 48
    tLESS       shift, and go to state 49
    tAND        shift, and go to state 50
    tOR         shift, and go to state 51


State 34

    4 stmt: tREAD tLPAREN tIDENT . tRPAREN tSEMICOLON

    tRPAREN  shift, and go to state 58


State 35

    5 stmt: tPRINT tLPAREN expr . tRPAREN tSEMICOLON
   32 expr: expr . tMUL expr
   33     | expr . tDIV expr
   34     | expr . tADD expr
   35     | expr . tMINUS expr
   36     | expr . tGREATEREQ expr
   37     | expr . tLESSEQ expr
   38     | expr . tGREATER expr
   39     | expr . tLESS expr
   40     | expr . tEQUALS expr
   41     | expr . tNEQUALS expr
   42     | expr . tAND expr
   43     | expr . tOR expr

    tRPAREN     shift, and go to state 59
    tADD        shift, and go to state 40
    tMUL        shift, and go to state 41
    tDIV        shift, and go to state 42
    tMINUS      shift, and go to state 43
    tEQUALS     shift, and go to state 44
    tNEQUALS    shift, and go to state 45
    tGREATEREQ  shift, and go to state 46
    tLESSEQ     shift, and go to state 47
    tGREATER    shift, and go to state 48
    tLESS       shift, and go to state 49
    tAND        shift, and go to state 50
    tOR         shift, and go to state 51


State 36

   31 expr: tLPAREN expr . tRPAREN
   32     | expr . tMUL expr
   33     | expr . tDIV expr
   34     | expr . tADD expr
   35     | expr . tMINUS expr
   36     | expr . tGREATEREQ expr
   37     | expr . tLESSEQ expr
   38     | expr . tGREATER expr
   39     | expr . tLESS expr
   40     | expr . tEQUALS expr
   41     | expr . tNEQUALS expr
   42     | expr . tAND expr
   43     | expr . tOR expr

    tRPAREN     shift, and go to state 60
    tADD        shift, and go to state 40
    tMUL        shift, and go to state 41
    tDIV        shift, and go to state 42
    tMINUS      shift, and go to state 43
    tEQUALS     shift, and go to state 44
    tNEQUALS    shift, and go to state 45
    tGREATEREQ  shift, and go to state 46
    tLESSEQ     shift, and go to state 47
    tGREATER    shift, and go to state 48
    tLESS       shift, and go to state 49
    tAND        shift, and go to state 50
    tOR         shift, and go to state 51


State 37

   29 expr: tMINUS expr .  [tRPAREN, tSEMICOLON, tADD, tMUL, tDIV, tMINUS, tEQUALS, tNEQUALS, tGREATEREQ, tLESSEQ, tGREATER, tLESS, tAND, tOR]
   32     | expr . tMUL expr
   33     | expr . tDIV expr
   34     | expr . tADD expr
   35     | expr . tMINUS expr
   36     | expr . tGREATEREQ expr
   37     | expr . tLESSEQ expr
   38     | expr . tGREATER expr
   39     | expr . tLESS expr
   40     | expr . tEQUALS expr
   41     | expr . tNEQUALS expr
   42     | expr . tAND expr
   43     | expr . tOR expr

    tADD        shift, and go to state 40
    tMUL        shift, and go to state 41
    tDIV        shift, and go to state 42
    tMINUS      shift, and go to state 43
    tEQUALS     shift, and go to state 44
    tNEQUALS    shift, and go to state 45
    tGREATEREQ  shift, and go to state 46
    tLESSEQ     shift, and go to state 47
    tGREATER    shift, and go to state 48
    tLESS       shift, and go to state 49
    tAND        shift, and go to state 50
    tOR         shift, and go to state 51

    tADD        [reduce using rule 29 (expr)]
    tMUL        [reduce using rule 29 (expr)]
    tDIV        [reduce using rule 29 (expr)]
    tMINUS      [reduce using rule 29 (expr)]
    tEQUALS     [reduce using rule 29 (expr)]
    tNEQUALS    [reduce using rule 29 (expr)]
    tGREATEREQ  [reduce using rule 29 (expr)]
    tLESSEQ     [reduce using rule 29 (expr)]
    tGREATER    [reduce using rule 29 (expr)]
    tLESS       [reduce using rule 29 (expr)]
    tAND        [reduce using rule 29 (expr)]
    tOR         [reduce using rule 29 (expr)]
    $default    reduce using rule 29 (expr)


State 38

   30 expr: tNOT expr .  [tRPAREN, tSEMICOLON, tADD, tMUL, tDIV, tMINUS, tEQUALS, tNEQUALS, tGREATEREQ, tLESSEQ, tGREATER, tLESS, tAND, tOR]
   32     | expr . tMUL expr
   33     | expr . tDIV expr
   34     | expr . tADD expr
   35     | expr . tMINUS expr
   36     | expr . tGREATEREQ expr
   37     | expr . tLESSEQ expr
   38     | expr . tGREATER expr
   39     | expr . tLESS expr
   40     | expr . tEQUALS expr
   41     | expr . tNEQUALS expr
   42     | expr . tAND expr
   43     | expr . tOR expr

    tMINUS  shift, and go to state 43

    tMINUS    [reduce using rule 30 (expr)]
    $default  reduce using rule 30 (expr)

    Conflict between rule 30 and token tADD resolved as reduce (tADD < tNOT).
    Conflict between rule 30 and token tMUL resolved as reduce (tMUL < tNOT).
    Conflict between rule 30 and token tDIV resolved as reduce (tDIV < tNOT).
    Conflict between rule 30 and token tEQUALS resolved as reduce (tEQUALS < tNOT).
    Conflict between rule 30 and token tNEQUALS resolved as reduce (tNEQUALS < tNOT).
    Conflict between rule 30 and token tGREATEREQ resolved as reduce (tGREATEREQ < tNOT).
    Conflict between rule 30 and token tLESSEQ resolved as reduce (tLESSEQ < tNOT).
    Conflict between rule 30 and token tGREATER resolved as reduce (tGREATER < tNOT).
    Conflict between rule 30 and token tLESS resolved as reduce (tLESS < tNOT).
    Conflict between rule 30 and token tAND resolved as reduce (tAND < tNOT).
    Conflict between rule 30 and token tOR resolved as reduce (tOR < tNOT).


State 39

    7 stmt: tIDENT tASSIGN expr tSEMICOLON .

    $default  reduce using rule 7 (stmt)


State 40

   23 expr: . tIDENT
   24     | . tTRUE
   25     | . tFALSE
   26     | . tINTVAL
   27     | . tFLOATVAL
   28     | . tSTRINGVAL
   29     | . tMINUS expr
   30     | . tNOT expr
   31     | . tLPAREN expr tRPAREN
   32     | . expr tMUL expr
   33     | . expr tDIV expr
   34     | . expr tADD expr
   34     | expr tADD . expr
   35     | . expr tMINUS expr
   36     | . expr tGREATEREQ expr
   37     | . expr tLESSEQ expr
   38     | . expr tGREATER expr
   39     | . expr tLESS expr
   40     | . expr tEQUALS expr
   41     | . expr tNEQUALS expr
   42     | . expr tAND expr
   43     | . expr tOR expr

    tTRUE       shift, and go to state 21
    tFALSE      shift, and go to state 22
    tINTVAL     shift, and go to state 23
    tFLOATVAL   shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tIDENT      shift, and go to state 26
    tLPAREN     shift, and go to state 27
    tMINUS      shift, and go to state 28
    tNOT        shift, and go to state 29

    expr  go to state 61


State 41

   23 expr: . tIDENT
   24     | . tTRUE
   25     | . tFALSE
   26     | . tINTVAL
   27     | . tFLOATVAL
   28     | . tSTRINGVAL
   29     | . tMINUS expr
   30     | . tNOT expr
   31     | . tLPAREN expr tRPAREN
   32     | . expr tMUL expr
   32     | expr tMUL . expr
   33     | . expr tDIV expr
   34     | . expr tADD expr
   35     | . expr tMINUS expr
   36     | . expr tGREATEREQ expr
   37     | . expr tLESSEQ expr
   38     | . expr tGREATER expr
   39     | . expr tLESS expr
   40     | . expr tEQUALS expr
   41     | . expr tNEQUALS expr
   42     | . expr tAND expr
   43     | . expr tOR expr

    tTRUE       shift, and go to state 21
    tFALSE      shift, and go to state 22
    tINTVAL     shift, and go to state 23
    tFLOATVAL   shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tIDENT      shift, and go to state 26
    tLPAREN     shift, and go to state 27
    tMINUS      shift, and go to state 28
    tNOT        shift, and go to state 29

    expr  go to state 62


State 42

   23 expr: . tIDENT
   24     | . tTRUE
   25     | . tFALSE
   26     | . tINTVAL
   27     | . tFLOATVAL
   28     | . tSTRINGVAL
   29     | . tMINUS expr
   30     | . tNOT expr
   31     | . tLPAREN expr tRPAREN
   32     | . expr tMUL expr
   33     | . expr tDIV expr
   33     | expr tDIV . expr
   34     | . expr tADD expr
   35     | . expr tMINUS expr
   36     | . expr tGREATEREQ expr
   37     | . expr tLESSEQ expr
   38     | . expr tGREATER expr
   39     | . expr tLESS expr
   40     | . expr tEQUALS expr
   41     | . expr tNEQUALS expr
   42     | . expr tAND expr
   43     | . expr tOR expr

    tTRUE       shift, and go to state 21
    tFALSE      shift, and go to state 22
    tINTVAL     shift, and go to state 23
    tFLOATVAL   shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tIDENT      shift, and go to state 26
    tLPAREN     shift, and go to state 27
    tMINUS      shift, and go to state 28
    tNOT        shift, and go to state 29

    expr  go to state 63


State 43

   23 expr: . tIDENT
   24     | . tTRUE
   25     | . tFALSE
   26     | . tINTVAL
   27     | . tFLOATVAL
   28     | . tSTRINGVAL
   29     | . tMINUS expr
   30     | . tNOT expr
   31     | . tLPAREN expr tRPAREN
   32     | . expr tMUL expr
   33     | . expr tDIV expr
   34     | . expr tADD expr
   35     | . expr tMINUS expr
   35     | expr tMINUS . expr
   36     | . expr tGREATEREQ expr
   37     | . expr tLESSEQ expr
   38     | . expr tGREATER expr
   39     | . expr tLESS expr
   40     | . expr tEQUALS expr
   41     | . expr tNEQUALS expr
   42     | . expr tAND expr
   43     | . expr tOR expr

    tTRUE       shift, and go to state 21
    tFALSE      shift, and go to state 22
    tINTVAL     shift, and go to state 23
    tFLOATVAL   shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tIDENT      shift, and go to state 26
    tLPAREN     shift, and go to state 27
    tMINUS      shift, and go to state 28
    tNOT        shift, and go to state 29

    expr  go to state 64


State 44
